fix CSS alignment

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -24,7 +24,8 @@
     }
 
     table {
-        max-width: 30vw;
+        max-width: 60vw;
+        align-items: stretch;
 
         :last-child {
             text-align: right;
